--- a/styles.css
+++ b/styles.css
@@ -10,14 +10,13 @@
 }
 .container{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     width: 60vw;
     height: 40vh;
     padding: 40px;
     margin-inline: 20%;
     margin-top: 8vh;
-    column-gap: 20px;
     border: 1px solid #ccc;
     border-radius: 10px;
 }
@@ -39,4 +38,19 @@
 .highlight{
     background-color: rgb(118, 158, 188);
     color: rgba(0, 0, 0, 1);
+}
+
+
+@media screen and (max-width:700px){
+    .container{
+        flex-direction: column;
+        row-gap: 50px;
+        width: 85vw;
+        height: 65vh;
+        padding: 40px 10px;
+        margin-inline: 8%;
+    }
+    .bottom{
+        text-align: center;
+    }
 }
